Changed image version in article detail

--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -26,8 +26,8 @@
     <ul>
       {% for picture in article.pictures %}
       <li {% if not forloop.first %} style="display:none;" {% endif %} >
-        <a href="{% version picture.image.path 'medium' %}"  title="{{ picture.name }}">
-          <img src="{% version picture.image.path 'small' %}" alt="{{ picture.name }}" />
+        <a href="{% version picture.image.path 'big' %}"  title="{{ picture.name }}">
+          <img src="{% version picture.image.path 'big' %}" alt="{{ picture.name }}" />
 
         <p>{{ picture.name }}
         {% if article.pictures|length >= 2 %}
