--- a/cyclope/media/css/fonts.css
+++ b/cyclope/media/css/fonts.css
@@ -6,4 +6,4 @@
 @font-face {font-family: lato; src: url('../fonts/lato.ttf');}
 @font-face {font-family: sofia; src: url('../fonts/sofia.otf');}
 @font-face {font-family: toscuchet; src: url('../fonts/toscuchet.otf');}
-@font-face {font-family: ubuntu; src: url('../fonts/ubuntu.otf');}
+@font-face {font-family: ubuntu; src: url('../fonts/ubuntu.ttf');}
