Implemented palette colours in backend Cyclope

--- a/cyclope/templates/cyclope/themes/neutronix/base.html
+++ b/cyclope/templates/cyclope/themes/neutronix/base.html
@@ -50,6 +50,17 @@
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/ratings.js" ></script>
     {% endif %}
     <script type="text/javascript">
+		less.modifyVars({ 
+			'color-alpha': '#fff',
+            'colora': '#FFD168',
+            'colorb': '#FDC849',
+            'colorc': 'FDA900',
+            'colord': 'EF6200',
+            'colore': '#CD4518',
+            'color-omega':'#000'
+            });
+    </script>
+    <script type="text/javascript">
     $(function() {
         $('#gallery a').lightBox({
             overlayBgColor:         '#000',
