Changed path browser image footer

--- a/cyclope/templates/cyclope/themes/neutronix/footer.html
+++ b/cyclope/templates/cyclope/themes/neutronix/footer.html
@@ -11,7 +11,7 @@
         </span><br/>
         <span>Este sitio ha sido desarrollado sobre estándares de diseño web que cualquier navegador de calidad visualizará correctamente. </span><br/>
 
-        <img src="/media/uploads/images/banners/navegadores.png" width="246" height="36" border="0" usemap="#map-nav" alt="navegadores"/>
+        <img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/css/navegadores.png" width="246" height="36" border="0" usemap="#map-nav" alt="navegadores"/>
         <map name="map-nav" id="map-nav">
           <!-- #$-:Image map file created by GIMP Image Map plug-in -->
           <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
