Fixed syntax #user_comments li li

--- a/cyclope/media/themes/neutronix/css/cyclope.less
+++ b/cyclope/media/themes/neutronix/css/cyclope.less
@@ -2557,7 +2557,7 @@ COMMENTS
   font-size:0.8em;}
   
 #user_comments ul {list-style:none;background:#fff;margin:0 0 20px;padding:0;}
-#user_comments li {margin:0;padding:0;font-size:12px;overflow:auto;border:1px solid @colorb;.rounded-corners-top(4px)}
+#user_comments li {margin:0;padding:0;font-size:12px;overflow:auto;border:1px solid @colorb;.rounded-corners-top(4px);}
 #user_comments li p {padding:7px 20px;}
 #user_comments a.comment_reply_link {font-size:.85em;float:right;padding:1px;margin:0 20px 20px 0;display:block;width:100px;text-align:center;background:@colora;color:@color-omega;border:1px solid @colorb;.rounded-corners(8px);}
 #user_comments ul ul {display:block;clear:both;border:none;margin:0 10px 10px;}
@@ -2574,7 +2574,7 @@ COMMENTS
 #user_comments ul ul a.comment_reply_link {float:right;padding:0;margin:0 10px 20px 0;display:block;width:100px;text-align:center;color:@colore;.rounded-corners(0);border:none;background:@color-alpha;}
 
 #user_comments li li .when_who a {
-  color@color-omega;}
+  color:@color-omega;}
 /*-----------------------------------------------------------------------------------------------
 LOVE
 -----------------------------------------------------------------------------------------------*/
