--- a/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
@@ -49,7 +49,7 @@ var media_loaded = media_loaded || loadMedia();
 <div class='player'>
 {% with type=current_object.get_object_name file_type=current_object.file_type %}
   {% if file_type == 'mp3' or file_type == 'ogg' %}
-    <audio controls="control" preload="none" src="{{ current_object.media_file }}" type="audio/{{ file_type }}" height="{{ player_audio_height|default:30 }}" width="{{ player_audio_width|default:240 }}" /></audio>
+    <audio controls="control" preload="none" src="{{ current_object.media_file }}" type="audio/{{ file_type }}" height="{{ player_audio_height|default:30 }}" width="{{ player_audio_width|default:240 }}"></audio>
   {% elif file_type == 'ogv' or file_type == 'flv' or file_type == 'mp4' or file_type == 'webm' %}
     <video width="{{ player_video_width|default:480 }}" height="{{ player_video_height|default:360 }}"  controls="controls" preload="none">
       <source src="{{ current_object.media_file }}" {% if file_type == 'ogv' %}type="video/ogg"{% else %}type="video/{{ file_type }}"{% endif %} />
