More fixes to html (unclosed tag, alt, etc)

--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -13,7 +13,7 @@
       {% endif %}
     </div>
 
-    <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/article.png" />
+    <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/article.png" alt="article icon"/>
       <a href="{{ article.get_absolute_url }}">{{ article.name }}</a>
     </h2>
 
