Some minnor improvements to questions

--- a/cyclope/apps/polls/templates/polls/poll_submission.html
+++ b/cyclope/apps/polls/templates/polls/poll_submission.html
@@ -19,7 +19,7 @@
     {% endfor %}
     {{ captcha_form|crispy }}
     <div class="buttonHolder">
-      <input type="submit" value="{% trans "Submit" %}" />
+      <input type="submit" value="{% trans 'Submit' %}" />
     </div>
   </form>
 
