--- a/cyclope/apps/related_admin/templates/related_admin/gfk_widget.html
+++ b/cyclope/apps/related_admin/templates/related_admin/gfk_widget.html
@@ -8,7 +8,7 @@
     </a>
   </div>
   <div class="create-content">
-    <div class="create-button">{% trans "Create" %}</div>
+    <!-- <div class="create-button">{% trans "Create" %}</div> -->
   </div>
 </div>
 
@@ -66,8 +66,8 @@ var content_types = new Array();
 {% for ct in content_types %}
     content_types[{{ ct.0 }}] = '{{ ct.1 }}/{{ ct.2 }}/';
 {% endfor %}
-    $.get("/api/create", {"ct_id":20}, function (data){
-        $("#id_{{ name }}").after(data);
-        console.log(data);
+    /*$.get("/api/create", {"ct_id": 20}, function (data){
+        $("#id_{{ name }}").parent().parent().parent().after(data);
     })
+    */
 </script>
